@@ -1,1 +1,1 @@
-{"450001712305143869":{"name":"Colin","gbp":5027.25,"achievements":[]},"497803559144914944":{"name":"Andrew","gbp":100,"achievements":[]},"499328039621230592":{"name":"Wyatt","gbp":370,"achievements":[]},"463080062175019010":{"name":"Ian","gbp":500,"achievements":[]},"210861925771247636":{"name":"Zaid","gbp":500,"achievements":[]},"501929393401364481":{"name":"Mike","gbp":500,"achievements":[]},"509430603339399186":{"name":"Brian","gbp":500,"achievements":[]},"526190184455471105":{"name":"Carl","gbp":500,"achievements":[]},"462798271195119626":{"name":"Alex","gbp":500,"achievements":[]},"562203622474252288":{"name":"Dylan","gbp":500,"achievements":[]},"501887537451630593":{"name":"Ramzi","gbp":500,"achievements":[]},"434471986748456962":{"name":"Chrisvan","gbp":500,"achievements":[]},"497861779020578837":{"name":"Hayden","gbp":500,"achievements":[]},"501930484838957069":{"name":"Tom","gbp":500,"achievements":[]},"581903756111773716":{"name":"Justin","gbp":500,"achievements":[]},"508076579684089896":{"name":"Jacob","gbp":500,"achievements":[]},"525147400176664626":{"name":"Teddy","gbp":500,"achievements":[]},"640368746690510868":{"name":"Slim","gbp":500,"achievements":[]},"498262864541515786":{"name":"Derek","gbp":544,"achievements":[]}}
+{"450001712305143869":{"name":"Colin","gbp":4777.5,"achievements":[],"simmerdown":0},"497803559144914944":{"name":"Andrew","gbp":100,"achievements":[],"simmerdown":0},"499328039621230592":{"name":"Wyatt","gbp":370,"achievements":[],"simmerdown":0},"463080062175019010":{"name":"Ian","gbp":500,"achievements":[],"simmerdown":0},"210861925771247636":{"name":"Zaid","gbp":500,"achievements":[],"simmerdown":0},"501929393401364481":{"name":"Mike","gbp":500,"achievements":[],"simmerdown":0},"509430603339399186":{"name":"Brian","gbp":500,"achievements":[],"simmerdown":0},"526190184455471105":{"name":"Carl","gbp":500,"achievements":[],"simmerdown":0},"462798271195119626":{"name":"Alex","gbp":500,"achievements":[],"simmerdown":0},"562203622474252288":{"name":"Dylan","gbp":500,"achievements":[],"simmerdown":0},"501887537451630593":{"name":"Ramzi","gbp":500,"achievements":[],"simmerdown":0},"434471986748456962":{"name":"Chrisvan","gbp":500,"achievements":[],"simmerdown":0},"497861779020578837":{"name":"Hayden","gbp":500,"achievements":[],"simmerdown":0},"501930484838957069":{"name":"Tom","gbp":500,"achievements":[],"simmerdown":0},"581903756111773716":{"name":"Justin","gbp":500,"achievements":[],"simmerdown":0},"508076579684089896":{"name":"Jacob","gbp":500,"achievements":[],"simmerdown":0},"525147400176664626":{"name":"Teddy","gbp":500,"achievements":[],"simmerdown":0},"640368746690510868":{"name":"Slim","gbp":500,"achievements":[],"simmerdown":0},"498262864541515786":{"name":"Derek","gbp":544,"achievements":[],"simmerdown":0}}
