@@ -3,6 +3,7 @@ module.exports = {
     description: 'custom emoji test',
     execute(message,args){
         const fs = require('fs')
+        var master = JSON.parse(fs.readFileSync("./JSON/master.json", "utf-8"))
         var tracker = JSON.parse(fs.readFileSync("./JSON/achievements_tracker.json", "utf-8"))
         var bwg = JSON.parse(fs.readFileSync("./JSON/default_json.json", "utf-8"))
         var stats = JSON.parse(fs.readFileSync("./JSON/default_json.json", "utf-8"))
@@ -27,7 +28,9 @@ module.exports = {
                 tracker[i][28] = 0
                 tracker[i][29] = 0
             }
-            
+            for(i in master){
+                master[i].simmerdown = 0
+            }
 
             for(i in bwg){
                 bwg[i].target = ""
